Implement BD
Services have been updated to use the previously configured database